--- a/style.css
+++ b/style.css
@@ -88,46 +88,39 @@ p {
   }
 }
 
-
 @media (min-width:200px) and (max-width: 690px) {
-  
+
   body {
     margin: 0;
     width: 100%;
     height: 100%;
-    overflow: hidden;
     overflow-x: hidden;
+    overflow: scroll;
     padding: 0;
   }
-  
 
   .logo {
     height: 100px;
     width: 300px;
     position: absolute;
-    left: 185px;
+    left: 110px;
   }
-
   h1{
-    font-size: 70px;
+    font-size: 50px;
     position: absolute;
-    left: 60px;
-    top: 410px;
+    left: 70px;
+    top: 350px;
   }
-  .first {
-    font-size: 30px;
+  .utama {
+    font-size: 17px;
     position: relative;
-    left: 12px;
-    text-align: center;
-    top: 490px;
+    left: 60px;
+    top: 405px;
   }
-
-  .second{
-    font-size: 20px;
+  .kedua {
+    font-size: 15px;
     position: absolute;
     left: 210px;
-    top: 525px;
-  }
-
-
+    top: 430px;
+  }
 }
