--- a/style.css
+++ b/style.css
@@ -43,14 +43,14 @@ p {
   padding: 0;
 }
 
-.first{
+.utama{
   left: 650px;
   font-size: 3rem;
   position: relative;
   top: 230px;
 }
 
-.second{
+.kedua{
   position: relative;
   font-size: 2rem;
   top: 250px;
@@ -95,7 +95,6 @@ p {
     width: 100%;
     height: 100%;
     overflow-x: hidden;
-    overflow: scroll;
     padding: 0;
   }
 
