--- a/style.css
+++ b/style.css
@@ -1,60 +1,25 @@
-@font-face {
-  font-family: 'plank';
-  src: url(./font/Octuple-max-demo.ttf);
-}
-
-@font-face {
-  font-family: 'boeotia';
-  src: url(./font/Boeotia.ttf);
-}
-
-
-body {
-  margin: 0;
-  width: 100%;
-  height: 100%;
-  overflow-x: hidden;
-  padding: 0;
-  display: flex;
-}
-
-.logo {
-  height: 110px;
-  position: relative;
-  left: 38%;
-  top: 20px;
-}
-
-h1{
-  margin: 0;
-  padding: 0;
-  font-size: 150px;
-  position: relative;
-  top: 250px;
-  left: 400px;
+ left: 205px;
   font-family: 'plank';
   color: white;
 }
-
 p {
   color: white;
   font-family: 'boeotia';
   margin:0;
   padding: 0;
 }
-
 .utama{
-  left: 650px;
-  font-size: 3rem;
+  left: 405px;
+  font-size: 2rem;
   position: relative;
-  top: 230px;
+  top: 210px;
 }
-
 .kedua{
   position: relative;
   font-size: 2rem;
-  top: 250px;
-  left:780px;
+  top: 205px;
+  left:650px;
+  left:685px;
 }
 
 .back-video {
@@ -83,15 +48,16 @@ p {
   }
 }
 @media (min-width:200px) and (max-width: 690px) {
-  
+
   body {
     margin: 0;
     width: 100%;
     height: 100%;
     overflow-x: hidden;
+    overflow: scroll;
     padding: 0;
   }
-  
+
   .logo {
     height: 100px;
     width: 300px;
@@ -108,6 +74,12 @@ p {
     font-size: 17px;
     position: relative;
     left: 60px;
+    top: 405px;
   }
-
+  .kedua {
+    font-size: 15px;
+    position: absolute;
+    left: 210px;
+    top: 430px;
+  }
 }
