--- a/style.css
+++ b/style.css
@@ -1,4 +1,32 @@
- left: 205px;
+@font-face {
+  font-family: 'plank';
+  src: url(./font/Octuple-max-demo.ttf);
+}
+@font-face {
+  font-family: 'boeotia';
+  src: url(./font/Boeotia.ttf);
+}
+body {
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+  padding: 0;
+}
+.logo {
+  height: 110px;
+  position: relative;
+  left: 550px;
+  top: 20px;
+}
+h1{
+  margin: 0;
+  padding: 0;
+  font-size: 150px;
+  position: relative;
+  top: 200px;
+  top: 190px;
+  left: 205px;
   font-family: 'plank';
   color: white;
 }
@@ -17,11 +45,9 @@ p {
 .kedua{
   position: relative;
   font-size: 2rem;
-  top: 205px;
-  left:650px;
+  top: 210px;
   left:685px;
 }
-
 .back-video {
   position: absolute;
   right: 0;
@@ -48,16 +74,15 @@ p {
   }
 }
 @media (min-width:200px) and (max-width: 690px) {
-
+  
   body {
     margin: 0;
     width: 100%;
     height: 100%;
     overflow-x: hidden;
-    overflow: scroll;
     padding: 0;
   }
-
+  
   .logo {
     height: 100px;
     width: 300px;
@@ -80,6 +105,6 @@ p {
     font-size: 15px;
     position: absolute;
     left: 210px;
-    top: 430px;
-  }
+    top: 430px;
+  }
 }
