--- a/style.css
+++ b/style.css
@@ -2,70 +2,59 @@
   font-family: 'plank';
   src: url(./font/Octuple-max-demo.ttf);
 }
-
 @font-face {
   font-family: 'boeotia';
   src: url(./font/Boeotia.ttf);
 }
-
-
 body {
   margin: 0;
   width: 100%;
   height: 100%;
   overflow-x: hidden;
   padding: 0;
-  display: flex;
 }
-
 .logo {
   height: 110px;
   position: relative;
-  left: 38%;
+  left: 550px;
   top: 20px;
 }
-
 h1{
   margin: 0;
   padding: 0;
   font-size: 150px;
   position: relative;
-  top: 250px;
-  left: 400px;
+  top: 200px;
+  top: 190px;
+  left: 205px;
   font-family: 'plank';
   color: white;
 }
-
 p {
   color: white;
   font-family: 'boeotia';
   margin:0;
   padding: 0;
 }
-
-.first{
-  left: 650px;
-  font-size: 3rem;
+.utama{
+  left: 405px;
+  font-size: 2rem;
   position: relative;
-  top: 230px;
+  top: 210px;
 }
-
-.second{
+.kedua{
   position: relative;
   font-size: 2rem;
-  top: 250px;
-  left:780px;
+  top: 210px;
+  left:685px;
 }
-
 .back-video {
   position: absolute;
   right: 0;
   bottom: 0;
   z-index: -1;
 }
-
-
-.all{
+.semua{
   background-color: rgba(11, 114, 167, 0.5);
   width: 100%;
   height: 100vh;
@@ -90,44 +79,38 @@ p {
 
 
 @media (min-width:200px) and (max-width: 690px) {
-  
+
   body {
     margin: 0;
     width: 100%;
     height: 100%;
-    overflow: hidden;
     overflow-x: hidden;
+    overflow: scroll;
     padding: 0;
   }
-  
 
   .logo {
     height: 100px;
     width: 300px;
     position: absolute;
-    left: 185px;
+    left: 110px;
   }
-
   h1{
-    font-size: 70px;
+    font-size: 50px;
     position: absolute;
-    left: 60px;
-    top: 410px;
+    left: 70px;
+    top: 350px;
   }
-  .first {
-    font-size: 30px;
+  .utama {
+    font-size: 17px;
     position: relative;
-    left: 12px;
-    text-align: center;
-    top: 490px;
+    left: 60px;
+    top: 405px;
   }
-
-  .second{
-    font-size: 20px;
+  .kedua {
+    font-size: 15px;
     position: absolute;
     left: 210px;
-    top: 525px;
+    top: 430px;
   }
-
-
 }
